@@ -189,7 +189,7 @@ class CSetupWizard extends CForm {
 		$table = new CTable(null, 'requirements');
 		$table->setAlign('center');
 
-		$final_result = true;
+		$finalResult = FrontendSetup::CHECK_OK;
 
 		$table->addRow(array(
 			SPACE,
@@ -200,10 +200,21 @@ class CSetupWizard extends CForm {
 		$reqs = FrontendSetup::i()->checkRequirements();
 		foreach ($reqs as $req) {
 			$result = null;
-			if ($req['result']) {
-				$result = new CSpan(_('OK'), 'green');
+
+			// OK
+			if ($req['result'] == FrontendSetup::CHECK_OK) {
+				$rowClass = '';
+				$result = new CSpan(_('OK'), 'ok');
 			}
+			// warning
+			elseif ($req['result'] == FrontendSetup::CHECK_WARNING) {
+				$rowClass = 'notice';
+				$result = new CSpan(_x('Warning', 'setup'), 'link_menu notice');
+				$result->setHint($req['error']);
+			}
+			// fatal error
 			else {
+				$rowClass = 'fail';
 				$result = new CSpan(_('Fail'), 'link_menu fail');
 				$result->setHint($req['error']);
 			}
@@ -215,25 +226,38 @@ class CSetupWizard extends CForm {
 					$req['required'] ? $req['required'] : SPACE,
 					$result
 				),
-				$req['result'] ? SPACE : 'fail');
+				$rowClass
+			);
 
-			$final_result &= (bool) $req['result'];
+			$finalResult = max($finalResult, $req['result']);
 		}
 
-		if (!$final_result) {
+		// fatal error
+		if ($finalResult == FrontendSetup::CHECK_FATAL) {
 			$this->DISABLE_NEXT_BUTTON = true;
 
-			$final_result = array(
+			$message = array(
 				_('Please correct all issues and press "Retry" button'),
 				BR(),
-				new CSubmit('retry', _('Retry')));
+				new CSubmit('retry', _('Retry'))
+			);
 		}
+		// OK or warning
 		else {
 			$this->DISABLE_NEXT_BUTTON = false;
-			$final_result = array(new CSpan(_('OK'), 'ok'));
+			$message = array(new CSpan(_('OK'), 'ok'));
+
+			// add a warning message
+			if ($finalResult == FrontendSetup::CHECK_WARNING) {
+				$message[] = BR();
+				$message[] = _('(with warnings)');
+			}
 		}
 
-		return array(new CDiv(array(BR(), $table, BR()), 'table_wraper'), new CDiv($final_result, 'info_bar'));
+		return array(
+			new CDiv(array(BR(), $table, BR()), 'table_wraper'),
+			new CDiv($message, 'info_bar')
+		);
 	}
 
 	function stage3() {
