@@ -9,6 +9,7 @@ Bug fixes:
 Changes for 2.2.1rc1
 
 New features:
+..F....... [ZBX-7250] added an optional PHP gettext check in the frontend setup (Pavels)
 ..F....... [ZBXNEXT-2016] changed the housekeeping settings to allow overriding item-level history and trend storage period if internal housekeeping is disabled (Pavels)
 ..F....... [ZBXNEXT-2016] removed the ZBX_HISTORY_DATA_UPKEEP constant (Pavels)
 ....I..... [ZBXNEXT-1256] changed example directory size user parameter to return bytes (Richlv)
